# 42-templates

./: CMakeLists.txt  README.md  doxygen_comment-Ci0-libft-extensions.txt  doxygen_comment-Ci0-libft-part1.txt  doxygen_comment-Ci0-libft-part2.txt  doxygen_comment-Ci0-libft.txt  doxygen_comment-Ci2-fractol.txt  doxygen_comment-Ci2-pipex.txt  doxygen_comment-Ci2-push_swap-with_warning.txt  doxygen_comment-Ci2-push_swap.txt  doxygen_comment-Ci3-minishell.txt  doxygen_comment-Ci3-philosophers.txt  doxygen_comment-Ci3-philosophers_error.txt
